resolved the screen overflow issue
the is resolved by using overflow-x  hidden

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 
 body{
+    overflow-x: hidden;
     margin: 0;
     font-family: 'BioRhyme', serif;
     background-color: "black";
